syntax = "proto3";

import "common.proto";

option java_package = "ai.h2o.api.proto.core";
//option java_outer_classname = "JobProto";
option java_multiple_files = true;

package core;


service Job {
    rpc poll (JobId) returns (JobInfo);

    rpc cancel (JobId) returns (JobInfo);
}


message JobId {
    string job_id = 1;
}

message JobInfo {
    Error error = 1;

    enum Status {
        RUNNING = 0;
        STOPPING = 1;
        DONE = 2;
        CANCELLED = 3;
        FAILED = 4;
    }

    enum TargetType {
        UNKNOWN = 0;
        FRAME = 1;
        MODEL = 2;
    }

    string job_id = 2;
    Status status = 3;
    float progress = 4;
    string message = 5;
    string target_id = 6;
    TargetType target_type = 7;

    int64 start_time = 8;
    int64 duration = 9;
    repeated string warning = 10;
}
